objects/Partner_Discount_Lookup__c.object
<CustomObject>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Level__c</fullName>
        <label>Partner Level</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ascent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summit</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <picklist>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual Image</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quote_Type__c</fullName>
        <label>Quote Type</label>
        <picklist>
            <picklistValues>
                <fullName>NX/VX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDGECONNECT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC-SP-Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC-SP-Metered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC-SP-Perpetual</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Registered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registered</label>
        <type>Checkbox</type>
    </fields>
    <label>Partner Discount Lookup</label>
    <nameField>
        <label>Partner Discount Lookup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Discount Lookups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>